[project]
name = "project_1-lebedinsky-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "[project_1_Lebedinsky_M25-555]",email = "[lebedins2.0@yandex.ru]"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
 packages = [
     { include = "labyrinth_game" },
 ]
 
[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
